{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 23,
  "lineage": "e4b52521-064c-e7c5-54dd-7794d08444b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AVG_Ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08962a4068733a2b6",
            "arn": "arn:aws:ec2:us-east-2:641456973426:instance/i-0185e217cd32876b5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0185e217cd32876b5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "avgustKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0d157a529eb316d",
            "private_dns": "ip-10-0-1-93.us-east-2.compute.internal",
            "private_ip": "10.0.1.93",
            "public_ip": "3.12.162.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b12e09d2fc58876e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0258459c4161104f2",
            "tags": {
              "Name": "AVG Ubuntu Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0554941be6b965cfe"
            ]
          },
          "dependencies": [
            "aws_security_group.AVG_Ubuntu_SG",
            "aws_subnet.AVG_Ubuntu_SN",
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AVG_Ubuntu_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:internet-gateway/igw-00d3e56a95d8c8149",
            "id": "igw-00d3e56a95d8c8149",
            "owner_id": "641456973426",
            "tags": {
              "Name": "AVG Ubuntu IG"
            },
            "vpc_id": "vpc-06b30bfb9a1b4ce55"
          },
          "dependencies": [
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "AVG_Ubuntu_LAN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:route-table/rtb-0aeccdb4d0f334008",
            "id": "rtb-0aeccdb4d0f334008",
            "owner_id": "641456973426",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d3e56a95d8c8149",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AVG_Ubuntu_LAN"
            },
            "vpc_id": "vpc-06b30bfb9a1b4ce55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.AVG_Ubuntu_IG",
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AVG_Ubuntu_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b9455c0fe7c3446",
            "route_table_id": "rtb-0aeccdb4d0f334008",
            "subnet_id": "subnet-0258459c4161104f2"
          },
          "dependencies": [
            "aws_internet_gateway.AVG_Ubuntu_IG",
            "aws_route_table.AVG_Ubuntu_LAN",
            "aws_subnet.AVG_Ubuntu_SN",
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AVG_Ubuntu_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:security-group/sg-0554941be6b965cfe",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0554941be6b965cfe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AVG_Ubuntu_SG",
            "name_prefix": "",
            "owner_id": "641456973426",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AVG Ubuntu SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b30bfb9a1b4ce55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AVG_Ubuntu_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:subnet/subnet-0258459c4161104f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0258459c4161104f2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "641456973426",
            "tags": {
              "Name": "AVG Ubuntu SN"
            },
            "tags_all": {
              "Name": "AVG Ubuntu SN"
            },
            "vpc_id": "vpc-06b30bfb9a1b4ce55"
          },
          "dependencies": [
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AVG_Ubuntu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:vpc/vpc-06b30bfb9a1b4ce55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b46503eb3c295788",
            "default_route_table_id": "rtb-00720e9b899a6e39c",
            "default_security_group_id": "sg-0f461705d0751d54a",
            "dhcp_options_id": "dopt-9668f1fd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06b30bfb9a1b4ce55",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00720e9b899a6e39c",
            "owner_id": "641456973426",
            "tags": {
              "Name": "AVG Ubuntu VPC"
            },
            "tags_all": {
              "Name": "AVG Ubuntu VPC"
            }
          }
        }
      ]
    }
  ]
}